# nwmng

./: .config  .gitignore  CMakeLists.txt  Makefile  README.md  TODO.md  main.c
cfg/: cfg.c  cfgdb.c
cfg/parser/: cfg_keys.h  generic_parser.c  generic_parser.h  json_parser.c  json_parser.h
cli/: cli.c  cli_print.c  climng_startup.c
doc/: Memory.md
hal/: bg_uart_cbs.c  bg_uart_cbs.h
hal/ble_stack/inc/common/: gecko_configuration.h  mesh_memory_config.h  mesh_sizes.h
hal/ble_stack/inc/host/: gecko_bglib_be.h  host_gecko.h  host_gecko_be.h
hal/common/uart/: uart_posix.c
hal/ncp_daemon/: makefile
hal/ncp_daemon/exe/: ncp_daemon
include/: projconfig.h  projconfig.h.in
include/cfg/: cfg.h  cfg_keys.h  cfgdb.h  generic_parser.h
include/cli/: cli.h  climng_startup.h
include/ipc/: ccipc.h  mng_ipc.h  opcodes.h
include/mng/: bgevt_hdr.h  dev_config.h  mng.h  models.h  nwk.h  stat.h
include/utils/: err.h  logging.h  shash.h  sockcomn.h  startup.h  utils.h
ipc/: ccipc.c  ccipc.h  mng_ipc.c  opcodes.h
logs/: .gitignore
mng/: bgevt_hdr.c  demo.c  dev_add.c  dev_bl.c  dev_config.c  mng.c  models.c  nwk.c  stat.c
mng/states/: as_addappkey.c  as_addsub.c  as_bindappkey.c  as_end.c  as_getdcd.c  as_rm.c  as_rmend.c  as_setconfig.c  as_setpub.c
tools/: .srcbak  clrlog.sh  err_gen.py  err_str.ct  err_str_gen.py  errcheck.sh  file_names.ct  main.c
tools/mesh_config/: templates.json
tools/mesh_config/example/: nwk.json  prov.json
tools/mesh_config/home/: nwk.json  prov.json
tools/mesh_config/test1/: nwk.json  prov.json
utils/: err.c  err_str.c  logging.c  shash.c  src_names.c  startup.c  utils.c  utils_print.c
utils/sock/: sockcomn.c
